--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
   <meta charset="UTF-8">
   <title>Encriptador César</title>
   <link rel="stylesheet" href="style.css">
+  <link rel="manifest" href="manifest.json" />
 </head>
 <body>
   <header>
@@ -32,5 +33,13 @@
   </main>
 
   <script src="app.js"></script>
+  <script>
+    if ('serviceWorker' in navigator) {
+      navigator.serviceWorker.register('service-worker.js')
+        .then(() => console.log('Service Worker registrado'))
+        .catch(err => console.log('Error SW:', err));
+    }
+  </script>
+  
 </body>
 </html>
